--- a/backend/movie_booking/src/main/resources/application.properties
+++ b/backend/movie_booking/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 # Ví d? v?i MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/movie_booking
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_booking_2
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
