--- a/fontend/cinema/package.json
+++ b/fontend/cinema/package.json
@@ -16,7 +16,10 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.0",
     "@phosphor-icons/react": "^2.1.7",
+    "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.510.0",
     "minimal-shared": "^1.0.9",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -31,10 +34,13 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
