--- a/fontend/cinema/package.json
+++ b/fontend/cinema/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.13",
     "lucide-react": "^0.510.0",
     "minimal-shared": "^1.0.9",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
