--- a/fontend/cinema/package.json
+++ b/fontend/cinema/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "lucide-react": "^0.510.0",
     "minimal-shared": "^1.0.9",
     "notistack": "^3.0.2",
@@ -29,7 +30,8 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "simplebar": "^6.3.1",
-    "simplebar-react": "^3.3.1"
+    "simplebar-react": "^3.3.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
