--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,17 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.0",
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@stomp/stompjs": "^7.1.1",
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.525.0",
     "minimal-shared": "^1.0.9",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
